@@ -33,7 +33,7 @@ export(AE3, ab, allele.recode, a2g, asplot,
    z)
 S3method(plot, hap.score)
 S3method(print, hap.score)
-import(utils)
+import(dplyr,utils)
 importFrom("graphics", "abline", "arrows", "axis", "box", "identify",
            "legend", "lines", "mtext", "par", "plot", "points",
            "segments", "text")
