@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/utils.R
+% Please edit documentation in R/circos.nhtplot.R
 \name{circos.mhtplot}
 \alias{circos.mhtplot}
 \title{circos Manhattan plot with gene annotation}
