@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/utils.R
+% Please edit documentation in R/cis.vs.trans.classification.R
 \name{cis.vs.trans.classification}
 \alias{cis.vs.trans.classification}
 \title{A cis/trans classifier}
