@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/utils.R
+% Please edit documentation in R/cnvplot.R
 \name{cnvplot}
 \alias{cnvplot}
 \title{genomewide plot of CNVs}
