@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/utils.R
+% Please edit documentation in R/gc.lambda.R
 \name{gc.lambda}
 \alias{gc.lambda}
 \title{Estionmation of the genomic control inflation statistic (lambda)}
