@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/utils.R
+% Please edit documentation in R/gsmr.R
 \name{gsmr}
 \alias{gsmr}
 \title{Mendelian randomization analysis}
