@@ -1,0 +1,20 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/logp.R
+\name{logp}
+\alias{logp}
+\title{log(p) for a normal deviate z}
+\usage{
+logp(z)
+}
+\arguments{
+\item{z}{normal deviate.}
+}
+\value{
+log10(P)
+}
+\description{
+log(p) for a normal deviate z
+}
+\examples{
+logp(100)
+}
