@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/utils.R
+% Please edit documentation in R/mhtplot2d.R
 \name{mhtplot2d}
 \alias{mhtplot2d}
 \title{2D Manhattan plot}
