@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/utils.R
+% Please edit documentation in R/snptest_sample.R
 \name{snptest_sample}
 \alias{snptest_sample}
 \title{A utility to generate SNPTEST sample file}
